<resources>
    <string name="app_name">WeatherForecast</string>
    <string name="failed_refresh_msg">Failed to refresh</string>
    <string name="failed_network_msg">Failed from network</string>
    <string name="location_permission">Please allow location permisiion</string>
    <string name="ok">OK</string>
    <string name="retry">Retry</string>
    <string name="weather_city_name">City</string>
    <string name="weather_min_temp">Min Temp in Kelvin</string>
    <string name="weather_max_temp">Max temp in Kelvin</string>
    <string name="weather_desc">Weather</string>
    <string name="weather_speed">Wind Speed</string>
</resources>