<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.weatherforecast.viewmodel.MainViewModel" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       >



        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/rootConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/default_screen_padding">

            <TextView
                android:id="@+id/name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weather_city_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/name_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/min_temp_title"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/min_temp_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weather_min_temp"
                android:paddingEnd="@dimen/default_screen_padding"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name_title" />

            <TextView
                android:id="@+id/min_temp_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/min_temp_title"
                app:layout_constraintTop_toBottomOf="@id/name_title" />

            <TextView
                android:id="@+id/max_temp_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weather_max_temp"
                app:layout_constraintStart_toStartOf="parent"
                android:paddingEnd="@dimen/default_screen_padding"

                app:layout_constraintTop_toBottomOf="@+id/min_temp_title" />

            <TextView
                android:id="@+id/max_temp_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/max_temp_title"
                app:layout_constraintTop_toBottomOf="@+id/min_temp_title" />

            <TextView
                android:id="@+id/weather_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weather_desc"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/max_temp_title" />

            <TextView
                android:id="@+id/weather_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/max_temp_title"
                app:layout_constraintTop_toBottomOf="@+id/max_temp_title" />

            <TextView
                android:id="@+id/speed_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weather_speed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/weather_title" />

            <TextView
                android:id="@+id/speed_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/max_temp_title"
                app:layout_constraintTop_toBottomOf="@+id/weather_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <ProgressBar
            android:id="@+id/loading_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <LinearLayout
            android:id="@+id/error_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/error_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center_horizontal"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/retry_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="@{()->vm.refresh()}"
                android:text="@string/retry" />

        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>